# multiphysics-examples

./: CMakeLists.txt  README.md  build.sh  move.py
common/code/: CMakeLists.txt
common/code/src/: Solv_TekoAMG.cpp  Solv_TekoUtilities.cpp  Solv_TekoUtilities.hpp  multiphys_dirichlet.hpp  multiphys_dirichlet_blocks.hpp  multiphys_dof.hpp  multiphys_mesh.hpp  multiphys_mms.hpp  multiphys_mms_thermoelastic.hpp  multiphys_q1_assembly.hpp  multiphys_ransfer.hpp  multiphys_solvers.hpp  multiphys_transfer.hpp  teko_amg.cpp  teko_amg.hpp  tt_dirichlet.hpp  tt_dirichlet_blocks.hpp  tt_dof.hpp  tt_mesh.hpp  tt_mms.hpp  tt_mms_thermoelastic.hpp  tt_q1_assembly.hpp  tt_transfer.hpp  utilities.cpp  utilities.hpp
poisson-nernst-planck/code/: CMakeLists.txt  example.sh  teko-amg.xml  teko-bgs.xml
poisson-nernst-planck/code/src/: main.cpp  multiphys_mms_pnp_linear.hpp  multiphys_pnp_linear_q1.hpp  tt_mms_pnp_linear.hpp  tt_pnp_linear_q1.hpp
thermo-elastic-model/code/: CMakeLists.txt  example.sh  jacobi.xml  teko-amg.xml  teko-bgs.xml
thermo-elastic-model/code/src/: main.cpp  multiphys_hermoelastic_q1.hpp  multiphys_mms_thermoelastic.hpp  multiphys_nullspace.hpp  multiphys_thermoelastic_q1.hpp  tt_nullspace.hpp  tt_thermoelastic_q1.hpp
two-temperature-model/code/: CMakeLists.txt  build.sh  example.sh  ifpack2.xml  teko-amg.xml  teko-bgs.xml
two-temperature-model/code/src/: main.cpp  multiphys_mms.hpp
